<resources>
    <string name="app_name">Taal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version_prefix">Android-</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="valid_email">Enter a valid email address</string>
    <string name="valid_password">Password Length should be greater than 5</string>
    <string name="mobile">Mobile</string>
    <string name="valid_phone">Enter a valid number</string>
    <string name="valid_name">Enter a valid user name</string>
    <string name="home">Home</string>
    <string name="my_requests">My Requests</string>
    <string name="profile">Profile</string>
    <string name="search_by_category">Search by category</string>
    <string name="text">text</string>
    <string name="language_code">en</string>
    <string name="submit">Submit</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="fields_that_marked_with_are_require_fields">Fields that marked with (*) are required fields</string>
    <string name="fill_required_fields">Please fill required fields</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="quotations">Quotations</string>
    <string name="request_id">"Request# : "</string>
    <string name="request_details">Request Details</string>
    <string name="view_reviews">View reviews</string>
    <string name="accept">Accept</string>
    <string name="kd">KD</string>
    <string name="great">Great</string>
    <string name="continue_text">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="provider">Provider</string>
    <string name="quotation_details">Quotation details:</string>
    <string name="offered_price">Offered price</string>
    <string name="user_details">User details</string>
    <string name="name">"Name : "</string>
    <string name="mobile_pre">"Mobile : "</string>
    <string name="address">"Address : "</string>

</resources>
