<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/twilight_blue"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="35"
            android:src="@drawable/service" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="65"
            android:background="@drawable/top_start_corner_orange">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/welcome_back" />

                <TextView
                    style="@style/Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_in_to_continue" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/_230sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/full_name"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_profile"
                    app:endIconTint="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:hintTextColor="@color/white"
                    app:errorIconTint="@color/white"
                    app:errorTextColor="@color/white"
                    app:errorEnabled="true"
                    app:error="@{viewModel.nameError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.name}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/_230sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/email"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_email"
                    app:endIconTint="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:hintTextColor="@color/white"
                    app:errorIconTint="@color/white"
                    app:errorTextColor="@color/white"
                    app:errorEnabled="true"
                    app:error="@{viewModel.emailError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:text="@={viewModel.email}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/_230sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/mobile"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_phone"
                    app:endIconTint="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:hintTextColor="@color/white"
                    app:errorIconTint="@color/white"
                    app:errorTextColor="@color/white"
                    app:errorEnabled="true"
                    app:error="@{viewModel.mobileError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:text="@={viewModel.mobile}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/_230sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/white"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/white"
                    app:hintTextColor="@color/white"
                    app:errorIconTint="@color/white"
                    app:errorTextColor="@color/white"
                    app:errorEnabled="true"
                    app:error="@{viewModel.passwordError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/_230sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/confirm_password"
                    app:boxStrokeColor="@color/white"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/white"
                    app:hintTextColor="@color/white"
                    app:errorIconTint="@color/white"
                    app:errorTextColor="@color/white"
                    app:errorEnabled="true"
                    app:error="@{viewModel.confirmPasswordError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:text="@={viewModel.confirmPassword}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_width="@dimen/_230sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/sign_up"
                    android:textAppearance="@style/Light"
                    android:onClick="@{()-> viewModel.onAuthClicked()}"
                    app:icon="@drawable/ic_register"
                    app:iconGravity="textStart"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <data>
        <variable
            name="viewModel"
            type="com.vavisa.taal.ui.auth.register.RegisterViewModel" />
    </data>

</layout>