<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_background"
        android:layerType="software"
        tools:context=".ui.main.requests.invoice.InvoiceFragment">

        <ScrollView
            android:id="@+id/container"
            android:background="@drawable/whit_rounded_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="@dimen/_10sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@{@string/request_id + invoice.requestCase.caseId, default = @string/request_id}"
                    android:textColor="@color/twilight_blue"
                    android:textSize="@dimen/_15ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@drawable/dotted" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/category"
                            android:textColor="@color/twilight_blue"
                            android:textSize="@dimen/_15ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@{invoice.requestCase.category.name}"
                            android:textColor="@color/twilight_blue"
                            android:textSize="@dimen/_10ssp" />

                    </LinearLayout>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50ssp"
                        android:layout_margin="@dimen/_5sdp"
                        app:imageUrl="@{invoice.requestCase.category.image}" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/dotted" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/description"
                    android:textColor="@color/twilight_blue"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/twilight_blue"
                    android:textSize="@dimen/_10ssp"
                    android:text="@{invoice.requestCase.description}"/>

                <View
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/dotted" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/provider"
                    android:textColor="@color/twilight_blue"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/twilight_blue"
                    android:textSize="@dimen/_10ssp"
                    android:text="@{invoice.quotation.provider.providerName}"/>

                <View
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/dotted" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/quotation_details"
                    android:textColor="@color/twilight_blue"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/twilight_blue"
                    android:textSize="@dimen/_10ssp"
                    android:text="@{invoice.quotation.extraNotes}"/>

                <View
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/dotted" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/pinkish_orange"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/offered_price"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@{invoice.quotation.price.concat(@string/kd)}"
                    android:textColor="@color/twilight_blue"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/twilight_blue"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/user_details"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/twilight_blue"
                    android:textSize="@dimen/_10ssp"
                    android:text="@{@string/name + invoice.user.fullName}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/twilight_blue"
                    android:textSize="@dimen/_10ssp"
                    android:text="@{@string/mobile_pre + invoice.address.mobile}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/twilight_blue"
                    android:textSize="@dimen/_10ssp"
                    android:text="@{@string/address + invoice.address.area.concat(` `).concat(invoice.address.city)}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/twilight_blue"
                    android:textSize="@dimen/_10ssp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="@{invoice.address.building.concat(`, Street `).concat(invoice.address.street).concat(`, Block `).concat(invoice.address.block)}"/>

            </LinearLayout>

        </ScrollView>

        <Space
            android:id="@+id/space"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_constraintBottom_toBottomOf="@id/container"
            app:layout_constraintVertical_bias="0.95"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:onClick="@{() -> viewModel.confirmClicked(invoice)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:backgroundTint="@color/pinkish_orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>
        <variable
            name="invoice"
            type="com.vavisa.taal.data.model.Invoice" />

        <variable
            name="viewModel"
            type="com.vavisa.taal.ui.main.requests.invoice.InvoiceViewModel" />
    </data>

</layout>
